<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/daily_news_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/daily_notification"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/daily_news_description"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/daily_notification_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daily_news_notification"
            android:layout_marginLeft="16dp" />

        <Switch
            android:id="@+id/daily_news_notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/language_settings_title"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/language_settings_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>